[gd_scene load_steps=8 format=3 uid="uid://dm5fdokmgctgr"]

[ext_resource type="Script" path="res://Scripts/Triggers/elevatorTrigger.gd" id="1_ln3f5"]
[ext_resource type="SpriteFrames" uid="uid://dsmkqxp44vj85" path="res://Art/TriggerArt/Elevator/ElevatorShaftAnims.tres" id="3_0w7dp"]
[ext_resource type="SpriteFrames" uid="uid://bopj1b1glrksm" path="res://Art/TriggerArt/Elevator/ElevatorStopAnims.tres" id="4_tg6iu"]
[ext_resource type="SpriteFrames" uid="uid://bxx3m14mnmyro" path="res://Art/TriggerArt/Elevator/elevatorBoxAnims.tres" id="5_k5lso"]
[ext_resource type="PackedScene" uid="uid://djjr177758y2h" path="res://Scenes/Triggers/Trigger_Helpers/triggerKey.tscn" id="7_g3rex"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jpt4m"]
size = Vector2(56, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lgas3"]
size = Vector2(64, 1)

[node name="elevatorTrigger" type="Node2D" node_paths=PackedStringArray("ElevatorShaft", "ElevatorBox", "ElevatorArea", "stoppingPoints", "TriggerKeySprite")]
position = Vector2(0, 48)
script = ExtResource("1_ln3f5")
ElevatorShaft = NodePath("ElevatorShaft")
ElevatorBox = NodePath("ElevatorBox")
ElevatorArea = NodePath("ElevatorBox/ElevatorArea")
stoppingPoints = [NodePath("ElevatorStops/Stop0"), NodePath("ElevatorStops/Stop10")]
button = 81
TriggerKeySprite = NodePath("TriggerKeySprite")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TriggerKeySprite" parent="." instance=ExtResource("7_g3rex")]
position = Vector2(0, 32)

[node name="ElevatorShaft" type="AnimatedSprite2D" parent="."]
z_index = -1
z_as_relative = false
position = Vector2(0, -48)
scale = Vector2(1, 1.5)
sprite_frames = ExtResource("3_0w7dp")
animation = &"activated"

[node name="ElevatorStops" type="Node2D" parent="."]
z_index = 5
z_as_relative = false

[node name="Stop0" type="AnimatedSprite2D" parent="ElevatorStops"]
position = Vector2(0, -16)
sprite_frames = ExtResource("4_tg6iu")
animation = &"elevatorStopActivated"

[node name="Stop1" type="AnimatedSprite2D" parent="ElevatorStops"]
visible = false
position = Vector2(0, -80)
sprite_frames = ExtResource("4_tg6iu")
animation = &"elevatorStopActivated"

[node name="Stop2" type="AnimatedSprite2D" parent="ElevatorStops"]
visible = false
position = Vector2(0, -144)
sprite_frames = ExtResource("4_tg6iu")
animation = &"elevatorStopActivated"

[node name="Stop3" type="AnimatedSprite2D" parent="ElevatorStops"]
visible = false
position = Vector2(0, -64)
sprite_frames = ExtResource("4_tg6iu")
animation = &"elevatorStopActivated"

[node name="Stop4" type="AnimatedSprite2D" parent="ElevatorStops"]
visible = false
position = Vector2(0, -64)
sprite_frames = ExtResource("4_tg6iu")
animation = &"elevatorStopActivated"

[node name="Stop5" type="AnimatedSprite2D" parent="ElevatorStops"]
visible = false
position = Vector2(0, -64)
sprite_frames = ExtResource("4_tg6iu")
animation = &"elevatorStopActivated"

[node name="Stop6" type="AnimatedSprite2D" parent="ElevatorStops"]
visible = false
position = Vector2(0, -64)
sprite_frames = ExtResource("4_tg6iu")
animation = &"elevatorStopActivated"

[node name="Stop7" type="AnimatedSprite2D" parent="ElevatorStops"]
visible = false
position = Vector2(0, -64)
sprite_frames = ExtResource("4_tg6iu")
animation = &"elevatorStopActivated"

[node name="Stop8" type="AnimatedSprite2D" parent="ElevatorStops"]
visible = false
position = Vector2(0, -64)
sprite_frames = ExtResource("4_tg6iu")
animation = &"elevatorStopActivated"

[node name="Stop9" type="AnimatedSprite2D" parent="ElevatorStops"]
visible = false
position = Vector2(0, -64)
sprite_frames = ExtResource("4_tg6iu")
animation = &"elevatorStopActivated"

[node name="Stop10" type="AnimatedSprite2D" parent="ElevatorStops"]
position = Vector2(0, -80)
sprite_frames = ExtResource("4_tg6iu")
animation = &"elevatorStopActivated"

[node name="ElevatorBox" type="AnimatedSprite2D" parent="."]
z_index = 11
z_as_relative = false
position = Vector2(0, -16)
sprite_frames = ExtResource("5_k5lso")
animation = &"closed"
metadata/_edit_group_ = true

[node name="ElevatorArea" type="Area2D" parent="ElevatorBox"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElevatorBox/ElevatorArea"]
shape = SubResource("RectangleShape2D_jpt4m")

[node name="StaticBody2D" type="StaticBody2D" parent="ElevatorBox"]

[node name="CollisionBase" type="CollisionShape2D" parent="ElevatorBox/StaticBody2D"]
position = Vector2(0, -16.5)
shape = SubResource("RectangleShape2D_lgas3")

[node name="CollisionRoof" type="CollisionShape2D" parent="ElevatorBox/StaticBody2D"]
position = Vector2(0, 16.5)
shape = SubResource("RectangleShape2D_lgas3")

[node name="MoveToPosition" type="Node2D" parent="."]
position = Vector2(0, -8)
